--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "email": "michaelnch91@gmail.com",
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": "17.6.0",
+    "yarn": "1.22.18"
+  },
   "dependencies": {
     "@apollo/client": "3.5.10",
     "@babel/preset-react": "7.16.7",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
-    "@rails/webpacker": "5.4.3",
+    "@rails/webpacker": "6.0.0-rc.6",
+    "babel-plugin-macros": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "chart.js": "3.7.1",
     "classnames": "2.3.1",
     "core-js": "3.21.1",
+    "date-fns": "2.28.0",
     "graphql": "16.3.0",
     "lodash": "4.17.21",
     "prettier": "2.5.1",
@@ -24,11 +30,18 @@
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-router-dom": "6",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "5.53.0",
+    "webpack-cli": "4.8.0"
+  },
+  "version": "0.1.0",
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
   },
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "@webpack-cli/serve": "^1.6.1",
+    "webpack-dev-server": "^4.7.4"
   },
   "prettier": {
     "semi": false,
