--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
     "@babel/preset-react": "7.16.7",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
-    "@rails/webpacker": "^6.0.0-rc.6",
-    "babel-plugin-macros": "^3.1.0",
+    "@rails/webpacker": "6.0.0-rc.6",
+    "babel-plugin-macros": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "chart.js": "3.7.1",
     "classnames": "2.3.1",
     "core-js": "3.21.1",
-    "date-fns": "^2.28.0",
+    "date-fns": "2.28.0",
     "graphql": "16.3.0",
     "lodash": "4.17.21",
     "prettier": "2.5.1",
     "prettier-plugin-tailwindcss": "0.1.8",
     "prop-types": "15.8.1",
+    "qrcode": "1.5.0",
     "react": "17.0.2",
     "react-chartjs-2": "4.0.1",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-router-dom": "6",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack": "5.71.0",
+    "webpack-cli": "4.9.2"
   },
   "version": "0.1.0",
   "babel": {
