--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
     "react-router-dom": "6",
+    "react-virtual": "2.10.4",
     "webpack": "5.71.0",
     "webpack-cli": "4.9.2"
   },
