--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
     "@rails/webpacker": "6.0.0-rc.6",
+    "@tailwindcss/line-clamp": "0.3.1",
     "babel-plugin-macros": "3.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "chart.js": "3.7.1",
